--- a/uicorektest/src/main/res/layout/activity_layoutk_btn.xml
+++ b/uicorektest/src/main/res/layout/activity_layoutk_btn.xml
@@ -12,30 +12,10 @@
         android:orientation="vertical"
         tools:context=".btnk.BtnKActivity">
 
-        <com.mozhimen.uicorek.layoutk.btn.LayoutKBtnSwitchApple
-            android:id="@+id/layoutk_btn_switchApple"
-            android:layout_width="50dp"
-            android:layout_height="30dp" />
-        <!--            app:layoutKBtnSwitchApple_animTime="300"-->
-        <!--            app:layoutKBtnSwitchApple_bgColorBorder="@color/blue_light"-->
-        <!--            app:layoutKBtnSwitchApple_bgColorOff="@color/blue_light"-->
-        <!--            app:layoutKBtnSwitchApple_bgColorOn="@color/blue_normal"-->
-        <!--            app:layoutKBtnSwitchApple_borderWidth="1dp"-->
-        <!--            app:layoutKBtnSwitchApple_defaultStatus="false"-->
-        <!--            app:layoutKBtnSwitchApple_iconColorBtn="@color/white"-->
-        <!--            app:layoutKBtnSwitchApple_iconMargin="3dp" />-->
-
-        <com.mozhimen.uicorek.layoutk.btn.LayoutKBtnSwitchApple
+        <com.mozhimen.uicorek.layoutk.btn.LayoutKBtnSwitch
             android:id="@+id/layoutk_btn_switchApple1"
             android:layout_width="50dp"
             android:layout_height="30dp"
-            app:layoutKBtnSwitchApple_animTime="300"
-            app:layoutKBtnSwitchApple_bgColorBorder="@color/blue_light"
-            app:layoutKBtnSwitchApple_bgColorOff="@color/blue_light"
-            app:layoutKBtnSwitchApple_bgColorOn="@color/blue_normal"
-            app:layoutKBtnSwitchApple_borderWidth="1dp"
-            app:layoutKBtnSwitchApple_defaultStatus="false"
-            app:layoutKBtnSwitchApple_iconColorBtn="@color/white"
-            app:layoutKBtnSwitchApple_iconMargin="3dp" />
+            app:layoutKBtnSwitch_animTime="1000" />
     </LinearLayout>
 </layout>
