--- a/uicorektest/src/main/res/layout/activity_layoutk_video.xml
+++ b/uicorektest/src/main/res/layout/activity_layoutk_video.xml
@@ -26,5 +26,11 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_change_video"
+            style="@style/BtnStyle"
+            android:text="换一个视频"
+            tools:ignore="HardcodedText" />
     </LinearLayout>
 </layout>
