--- a/uicorektest/src/main/res/layout/activity_layoutk_btn.xml
+++ b/uicorektest/src/main/res/layout/activity_layoutk_btn.xml
@@ -14,8 +14,8 @@
 
         <com.mozhimen.uicorek.layoutk.btn.LayoutKBtnSwitch
             android:id="@+id/layoutk_btn_switchApple1"
-            android:layout_width="50dp"
-            android:layout_height="30dp"
-            app:layoutKBtnSwitch_animTime="1000" />
+            android:layout_width="70dp"
+            android:layout_height="40dp"
+            app:layoutKBtnSwitch_bgColorOn="@color/blue_theme" />
     </LinearLayout>
 </layout>
