--- a/abilityktest/src/main/res/layout/activity_opencvk_contrast.xml
+++ b/abilityktest/src/main/res/layout/activity_opencvk_contrast.xml
@@ -10,7 +10,7 @@
         android:layout_height="match_parent"
         tools:context="com.mozhimen.abilityktest.opencvk.OpenCVKContrastActivity">
 
-        <com.mozhimen.componentk.cameraxk.CameraXKPreviewView
+        <com.mozhimen.componentk.cameraxk.CameraXKLayout
             android:id="@+id/opencvk_contrast_preview"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
