--- a/uicorektest/src/main/res/layout/activity_layoutk.xml
+++ b/uicorektest/src/main/res/layout/activity_layoutk.xml
@@ -83,6 +83,12 @@
 
             <com.google.android.material.button.MaterialButton
                 style="@style/BtnStyle"
+                android:onClick="goLayoutKSquare"
+                android:text="goLayoutKSquare"
+                tools:ignore="HardcodedText,UsingOnClickInXml" />
+
+            <com.google.android.material.button.MaterialButton
+                style="@style/BtnStyle"
                 android:onClick="goLayoutKTimeLine"
                 android:text="goLayoutKTimeLine"
                 tools:ignore="HardcodedText,UsingOnClickInXml" />
