--- a/abilityk/src/main/res/xml/smart_install_accessibility_service_config.xml
+++ b/abilityk/src/main/res/xml/smart_install_accessibility_service_config.xml
@@ -3,5 +3,5 @@
     android:accessibilityFeedbackType="feedbackGeneric"
     android:accessibilityFlags="flagDefault"
     android:canRetrieveWindowContent="true"
-    android:description="智能安装服务:程序正在更新中..."
+    android:description="@string/accessibility_service_description"
     android:packageNames="com.android.packageinstaller" />
