--- a/abilityk/src/main/res/xml/installk_smart_accessibility_service_config.xml
+++ b/abilityk/src/main/res/xml/installk_smart_accessibility_service_config.xml
@@ -3,5 +3,4 @@
     android:accessibilityFeedbackType="feedbackGeneric"
     android:accessibilityFlags="flagDefault"
     android:canRetrieveWindowContent="true"
-    android:description="@string/accessibility_service_description"
-    android:packageNames="com.android.packageinstaller" />
+    android:description="@string/installk_smart_accessibility_service_description"/>
