--- a/debugk/src/main/res/layout/debugk_activity_tabk_top.xml
+++ b/debugk/src/main/res/layout/debugk_activity_tabk_top.xml
@@ -10,7 +10,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <com.mozhimen.uicorek.layoutk.tab.top.TabTopLayout
+        <com.mozhimen.uicorek.layoutk.tab.top.LayoutKTabTop
             android:id="@+id/debugk_ui_tab_top"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
