--- a/uicorek/src/main/res/values/attrs.xml
+++ b/uicorek/src/main/res/values/attrs.xml
@@ -456,6 +456,20 @@
     </declare-styleable>
 
     <!--viewk-->
+    <declare-styleable name="ViewKWheel">
+        <attr name="viewKWheel_gravity">
+            <enum name="center" value="17"/>
+            <enum name="left" value="3"/>
+            <enum name="right" value="5"/>
+        </attr>
+        <attr name="viewKWheel_textSize" format="dimension"/>
+        <attr name="viewKWheel_textColorOut" format="color"/>
+        <attr name="viewKWheel_textColorCenter" format="color"/>
+        <attr name="viewKWheel_dividerColor" format="color"/>
+        <attr name="viewKWheel_dividerWidth" format="dimension"/>
+        <attr name="viewKWheel_lineSpacingMultiplier" format="float"/>
+    </declare-styleable>
+
     <declare-styleable name="ViewKOverlay">
         <attr name="viewKOverlay_isShowLabel" format="boolean" />
         <attr name="viewKOverlay_labelTextSize" format="dimension|reference" />
