--- a/uicorektest/src/main/res/layout/activity_layoutk_tab_bottom_layout.xml
+++ b/uicorektest/src/main/res/layout/activity_layoutk_tab_bottom_layout.xml
@@ -4,7 +4,7 @@
 
     <data />
 
-    <com.mozhimen.uicorek.layoutk.tab.bottom.TabBottomLayout
+    <com.mozhimen.uicorek.layoutk.tab.bottom.LayoutKTabBottom
         android:id="@+id/layoutk_tab_bottom_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -89,5 +89,5 @@
             </LinearLayout>
         </ScrollView>
 
-    </com.mozhimen.uicorek.layoutk.tab.bottom.TabBottomLayout>
+    </com.mozhimen.uicorek.layoutk.tab.bottom.LayoutKTabBottom>
 </layout>
