--- a/componentktest/src/main/res/layout/activity_permissionk.xml
+++ b/componentktest/src/main/res/layout/activity_permissionk.xml
@@ -8,7 +8,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.mozhimen.componentktest.permissionk.PermissionKActivity">
+        tools:context="com.mozhimen.componentktest.com.mozhimen.basicktest.permissionk.PermissionKActivity">
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
