--- a/basicktest/src/main/res/layout/activity_statusbark.xml
+++ b/basicktest/src/main/res/layout/activity_statusbark.xml
@@ -8,8 +8,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
-        tools:context="com.mozhimen.componentktest.statusbark.StatusBarKActivity">
+        android:background="@color/white">
 
         <TextView
             android:layout_width="wrap_content"
