--- a/uicorektest/src/main/res/values/values.xml
+++ b/uicorektest/src/main/res/values/values.xml
@@ -15,7 +15,7 @@
     </style>
 
     <style name="DialogKAnim_Custom" parent="android:Animation">
-        <item name="android:windowEnterAnimation">@anim/anim_top_in</item>
-        <item name="android:windowExitAnimation">@anim/anim_top_out</item>
+        <item name="android:windowEnterAnimation">@anim/animk_trans_top_show</item>
+        <item name="android:windowExitAnimation">@anim/animk_trans_top_hide</item>
     </style>
 </resources>
