--- a/uicorek/src/main/res/layout/textk_bubble.xml
+++ b/uicorek/src/main/res/layout/textk_bubble.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.mozhimen.uicorek.textk.bubble.TextKBubble xmlns:tools="http://schemas.android.com/tools"
-    style="@style/TextK_Bubble_Style"
+    style="@style/TextKBubble_Style"
     tools:text="test text" />
