--- a/uicorek/src/main/res/values/dimens.xml
+++ b/uicorek/src/main/res/values/dimens.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="pickerview_textsize">20sp</dimen>
+    <dimen name="viewk_wheel_textsize">20sp</dimen>
 </resources>
