--- a/uicorek/src/main/res/values/values.xml
+++ b/uicorek/src/main/res/values/values.xml
@@ -2,7 +2,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
     <!--dialogk-->
-    <style name="BaseDialog_Style" parent="@android:style/Theme.Dialog">
+    <style name="DialogK_Theme_Transparent" parent="@android:style/Theme.Dialog">
         <item name="android:windowFrame">@null</item>
         <item name="android:windowIsFloating">true</item>
         <item name="android:windowNoTitle">true</item>
@@ -12,14 +12,29 @@
         <item name="android:backgroundDimEnabled">false</item>
     </style>
 
-    <style name="DialogK_Style_Theme" parent="android:style/Theme.Dialog">
-        <!--<item name="android:backgroundDimEnabled">false</item>--><!--模糊-->
+    <style name="DialogK_Theme_Blur" parent="@android:style/Theme.Dialog">
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowIsTranslucent">false</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:backgroundDimEnabled">true</item>
+    </style>
+
+    <style name="DialogK_Theme_Translucent" parent="@android:style/Theme.Dialog">
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:backgroundDimEnabled">false</item>
+    </style>
+
+    <style name="DialogK_Theme_Fullscreen" parent="android:style/Theme.Dialog">
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowFullscreen">true</item>
-        <!--<item name="android:windowFrame">@null</item>
-        <item name="android:windowIsFloating">true</item>-->
     </style>
 
     <style name="DialogK_Style_Title">
@@ -46,11 +61,6 @@
         <item name="android:textColor">@color/blue_light</item>
     </style>
 
-    <style name="DialogK_Anim_Alpha" parent="android:Animation">
-        <item name="android:windowEnterAnimation">@anim/anim_alpha_in</item>
-        <item name="android:windowExitAnimation">@anim/anim_alpha_out</item>
-    </style>
-
     <!--layoutk-->
     <style name="LayoutKAmount_Style">
         <item name="layoutKAmount_minVal">0</item>
@@ -66,7 +76,7 @@
         <item name="layoutKAmount_btnSize">20dp</item>
     </style>
 
-    <style name="LayoutKEmpty_BtnStyle_Cancel">
+    <style name="LayoutKEmpty_Style_BtnCancel">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:backgroundTint">@color/gray_light</item>
@@ -122,12 +132,13 @@
     </style>
 
     <!--layoutk-->
+    <!--LayoutK_SpinnerForm-->
     <style name="LayoutKSpinnerForm_Style">
         <item name="android:colorControlNormal">@android:color/transparent
         </item> <!--改变了spinner的箭头颜色  -->
     </style>
 
-    <!--layoutk_nav-->
+    <!--layoutk_NavBar-->
     <style name="LayoutKNavBar_Style">
         <item name="layoutKNavBar_title_textSize">17sp</item>
         <item name="layoutKNavBar_title_textColor">@android:color/black</item>
@@ -140,33 +151,9 @@
         <item name="layoutKNavBar_lineWidth">0dp</item>
     </style>
 
-    <!--textk_bubble-->
-    <style name="TextKBubble_PopWin_Anim_ArrowDown">
-        <item name="android:windowEnterAnimation">@anim/anim_pop_bottom_show</item>
-        <item name="android:windowExitAnimation">@anim/anim_pop_bottom_hide</item>
-    </style>
-
-    <style name="TextKBubble_PopWin_Anim_ArrowLeft">
-        <item name="android:windowEnterAnimation">@anim/anim_pop_left_show</item>
-        <item name="android:windowExitAnimation">@anim/anim_pop_left_hide</item>
-    </style>
-
-    <style name="TextKBubble_PopWin_Anim_ArrowNone">
-        <item name="android:windowEnterAnimation">@anim/anim_pop_center_show</item>
-        <item name="android:windowExitAnimation">@anim/anim_pop_center_hide</item>
-    </style>
-
-    <style name="TextKBubble_PopWin_Anim_ArrowRight">
-        <item name="android:windowEnterAnimation">@anim/anim_pop_right_show</item>
-        <item name="android:windowExitAnimation">@anim/anim_pop_right_hide</item>
-    </style>
-
-    <style name="TextKBubble_PopWin_Anim_ArrowUp">
-        <item name="android:windowEnterAnimation">@anim/anim_pop_top_show</item>
-        <item name="android:windowExitAnimation">@anim/anim_pop_top_hide</item>
-    </style>
-
-    <style name="TextK_Bubble_Style">
+    <!--textk-->
+    <!--textk_Bubble-->
+    <style name="TextKBubble_Style">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_margin">4dp</item>
