--- a/uicorektest/src/main/res/layout/activity_layoutk_grid_fill.xml
+++ b/uicorektest/src/main/res/layout/activity_layoutk_grid_fill.xml
@@ -8,13 +8,20 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.mozhimen.uicorek.layoutk.LayoutKGridFill
+        <com.mozhimen.uicorek.layoutk.LayoutKSquare
             android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:background="@color/black"
+            android:layout_height="wrap_content"
+            app:layoutKSquare_measureMode="measureWidth"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent">
+
+            <com.mozhimen.uicorek.layoutk.LayoutKGridFill
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/black" />
+        </com.mozhimen.uicorek.layoutk.LayoutKSquare>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
